--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
            <h1 class="logo">Ermi's Portofolio</h1>
            <nav>
                <ul>
-                   <li><a href="#">All projects</a> </li>
+                   <li><a href="#">All </a> </li>
                    <li><a href="#">Multimedia</a> </li>
                    <li><a href="#">Mobile</a> </li>
                    <li><a href="#">Web</a> </li>
