--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
            <h1 class="logo">Ermi's Portofolio</h1>
            <nav>
                <ul>
-                   <li><a href="#">All </a> </li>
+                   <li><a href="#">All Projects</a> </li>
                    <li><a href="#">Multimedia</a> </li>
                    <li><a href="#">Mobile</a> </li>
                    <li><a href="#">Web</a> </li>
@@ -24,15 +24,11 @@
        </div>
     </header>
 
-    <section class="tagline">
-        <div class="container">
-            <h1>View works</h1>
-        </div>
-    </section>
 
-    <section>
+    <section class="tagline">
+        <h1 class="heading">All projects</h1>
+    </section>
         <div class="container">
-            <h1 class="heading">All projects</h1>
             <ul id="gallery">
                 <li class="web multimedia" >
                             <a href="http://users.metropolia.fi/~ermiash/3D%20graphics/to_Antti/ermi_3dsmax.html"
@@ -67,45 +63,9 @@
                         <img src="img/new_sabamestari_logo.png">
                     </a>
                 </li>
-                <li class="mobile multimedia">
-                    <a href="http://users.metropolia.fi/~ermiash/MobileProgramming/project/drinking_games.html"
-                       data-lightbox="projects"
-                       data-title="Another UI"
-                       data-desc="Heading up north">
-                        <img src="img/new_sabamestari_logo.png">
-                    </a>
-                </li>
-                <li class="web multimedia" >
-                    <a href="img/3d.png"
-                       data-lightbox="projects"
-                       data-title="Flight of the Bumble Bee"
-                       data-desc="This project was done for a 3D graphics course">
-                        <img src="img/3d.png"></a>
-                </li>
-                <li class="multimedia web" >
-                    <a href="img/new_sabamestari_logo.png"
-                       data-lightbox="projects"
-                       data-title="Sabamestari"
-                       data-desc="My internship project for the Finnish floorball Association">
-                        <img src="img/new_sabamestari_logo.png"></a>
-                </li>
-                <li class="web">
-                    <a href="img/3d.png"
-                       data-lightbox="projects"
-                       data-title="Flight of the Bumble Bee"
-                       data-desc="This project was done for a 3D graphics course">
-                        <img src="img/3d.png"></a>
-                </li>
-                <li class="mobile multimedia">
-                    <a href="img/new_sabamestari_logo.png"
-                       data-lightbox="projects"
-                       data-title="Sabamestari"
-                       data-desc="My internship project for the Finnish floorball Association">
-                        <img src="img/new_sabamestari_logo.png"></a>
-                </li>
+
             </ul>
         </div>
-    </section>
     <footer>
         <p>Copyright &copy; 2016, All Rights Reserved</p>
     </footer>
