--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
            <h1 class="logo">Ermi's Portofolio</h1>
            <nav>
                <ul>
-                   <li><a href="#">All Projects</a> </li>
+                   <li><a href="#">All projects</a> </li>
                    <li><a href="#">Multimedia</a> </li>
                    <li><a href="#">Mobile</a> </li>
                    <li><a href="#">Web</a> </li>
@@ -24,11 +24,15 @@
        </div>
     </header>
 
-
     <section class="tagline">
-        <h1 class="heading">All projects</h1>
-    </section>
         <div class="container">
+            <h1>View works</h1>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <h1 class="heading">All projects</h1>
             <ul id="gallery">
                 <li class="web multimedia" >
                             <a href="http://users.metropolia.fi/~ermiash/3D%20graphics/to_Antti/ermi_3dsmax.html"
@@ -66,6 +70,7 @@
 
             </ul>
         </div>
+    </section>
     <footer>
         <p>Copyright &copy; 2016, All Rights Reserved</p>
     </footer>
