--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
                                 <img src="img/3d.png"></a>
                 </li>
                 <li class="mobile" >
-                    <a href="img/new_sabamestari_logo.png"
+                    <a href="img/sabamestari.png"
                        data-lightbox="projects"
                        data-title="Sabamestari"
                        data-desc="My internship project for the Finnish floorball Association </br></br>
                        <i>It's a cross platform mobile application which will be released soon. </i>">
-                        <img src="img/new_sabamestari_logo.png">
+                        <img src="img/sabamestari.png">
                     </a>
                 </li>
                 <li class="web">
                     <a href="projects/Assignment/responsive.html"
                        data-lightbox="projects" data-title="Responsive Web 101"
                        data-desc="My first responsive web practice">
-                        <img src="img/3d.png">
+                        <img src="img/responsive.png">
                     </a>
                 </li>
                 <li class="mobile">
@@ -68,7 +68,7 @@
                        data-desc="Mobile programming course first project,  so mediocre. </br> </br>
                        A drinking games, Karaoke
                        </br><i>This got me started with JS</i>">
-                        <img src="img/new_sabamestari_logo.png">
+                        <img src="img/drinking.png">
                     </a>
                 </li>
 
@@ -77,7 +77,7 @@
                        data-lightbox="projects"
                        data-title="Weather app with angularjs"
                        data-desc="">
-                        <img src="img/new_sabamestari_logo.png">
+                        <img src="img/sabamestari.png">
                     </a>
                 </li>
                 <li class="web multimedia">
@@ -85,7 +85,7 @@
                        data-lightbox="projects"
                        data-title="Web 3D Cube "
                        data-desc="">
-                        <img src="img/new_sabamestari_logo.png">
+                        <img src="img/cube.png">
                     </a>
                 </li>
 
@@ -95,7 +95,7 @@
                        data-lightbox="projects"
                        data-title="Video Formats"
                        data-desc="</br></br> done for an Audio/Visual Course">
-                        <img src="img/new_sabamestari_logo.png">
+                        <img src="img/vformat.png">
                     </a>
                 </li>
 
