--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </li>
 
                 <li class="web">
-                    <a href="projects/the_rain_stoppers/index.html"
+                    <a href="projects/weather/index.html"
                        data-lightbox="projects"
                        data-title="Weather app with angularjs"
                        data-desc="">
@@ -94,7 +94,8 @@
                     <a href="projects/television/tv.html"
                        data-lightbox="projects"
                        data-title="Video Formats"
-                       data-desc="</br></br> done for an Audio/Visual Course">
+                       data-desc="</br> done for an Audio/Visual Course
+                       </br></br> <i>Checks what video format is supported on the browser used at the time of checking</i>">
                         <img src="img/vformat.png">
                     </a>
                 </li>
