--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                        data-lightbox="projects"
                        data-title="Weather app with angularjs"
                        data-desc="">
-                        <img src="img/sabamestari.png">
+                        <img src="img/weather.png">
                     </a>
                 </li>
                 <li class="web multimedia">
