added a link to Säbämestari app

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                 <img src="img/3d.png"></a>
                 </li>
                 <li class="mobile" >
-                    <a href="img/sabamestari.png"
+                    <a href="https://apkpure.com/s%C3%A4b%C3%A4mestari/com.salibandyliitto.sabamestari"
                        data-lightbox="projects"
                        data-title="Sabamestari"
                        data-desc="My internship project for the Finnish floorball Association </br></br>
@@ -99,6 +99,7 @@
                         <img src="img/vformat.png">
                     </a>
                 </li>
+
 
             </ul>
         </div>
