Added a ReactJS website

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                     </a>
                 </li>
                 <li class="web multimedia">
-                    <a href="projects/interactiveCube/cube.html"
+                    <a href="projects/bootstrapreact/index.html"
                        data-lightbox="projects"
-                       data-title="Web 3D Cube "
+                       data-title="Bootstrapping with ReactJS "
                        data-desc="">
                         <img src="img/cube.png">
                     </a>
