--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
                        data-lightbox="projects"
                        data-title="Sabamestari"
                        data-desc="My internship project for the Finnish floorball Association </br></br>
-                       <i>It's a cross platform mobile application which will be released soon. </i>">
+                       <i>It's a cross platform mobile application, the Android version is on Play Store. </i>">
                         <img src="img/sabamestari.png">
                     </a>
                 </li>
                 <li class="web">
                     <a href="projects/Assignment/responsive.html"
                        data-lightbox="projects" data-title="Responsive Web 101"
-                       data-desc="My first responsive web practice">
+                       data-desc="Bio Responsive">
                         <img src="img/responsive.png">
                     </a>
                 </li>
@@ -65,7 +65,7 @@
                     <a href="projects/project/drinking_games.html"
                        data-lightbox="projects"
                        data-title="Drinking games"
-                       data-desc="Mobile programming course first project,  so mediocre. </br> </br>
+                       data-desc="Mobile programming course first project </br> </br>
                        A drinking games, Karaoke
                        </br><i>This got me started with JS</i>">
                         <img src="img/drinking.png">
